Try to fix UI broke on mobile 10

--- a/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
+++ b/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
@@ -51,8 +51,8 @@
     flex: 0 1 auto;
     align-self: auto; 
     //font-size: 55px;
-    width: 57px;
-    height: 57px;
+    width: 3.55rem;
+    height: 3.55rem;
     border: 4px solid #6b6b6b;
     border-radius: 50%;
     margin: 3px 3px 3px 3px;
